// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feed actions:  Add FeedItems to state 1`] = `
Immutable.Map {
  "badge": 0,
  "list": Immutable.Map {
    "1": Immutable.Map {
      "id": "1",
      "date": "2018-06-23T22:11:29.754Z",
      "type": "1",
      "location": "undefined",
      "seen": false,
      "emailId": 1,
      "contactId": 2,
      "fileId": "undefined",
    },
    "2": Immutable.Map {
      "id": "2",
      "date": "2018-06-23T22:11:29.754Z",
      "type": "1",
      "location": "undefined",
      "seen": false,
      "emailId": 2,
      "contactId": 2,
      "fileId": "undefined",
    },
    "3": Immutable.Map {
      "id": "3",
      "date": "2018-06-23T22:11:29.754Z",
      "type": "1",
      "location": "undefined",
      "seen": false,
      "emailId": 3,
      "contactId": 2,
      "fileId": "undefined",
    },
  },
}
`;

exports[`Feed actions:  Add feedItems to state. clear: true 1`] = `
Immutable.Map {
  "badge": 0,
  "list": Immutable.Map {
    "0": Immutable.Map {
      "id": 0,
      "date": "2018-08-17T22:11:29.754Z",
      "type": "1",
      "location": undefined,
      "seen": false,
      "emailId": 1,
      "contactId": 2,
      "fileId": undefined,
    },
  },
}
`;
